@@ -122,9 +122,9 @@ struct game games[] = {
     default_port        : 27960,
     default_master_port : 27950,
     id                  : "WOS",
-    qstat_str           : "Q3S",
-    qstat_option        : "-q3s",
-    qstat_master_option : "-q3m",
+    qstat_str           : "RWS",
+    qstat_option        : "-rws",
+    qstat_master_option : "-rwm",
     icon                : "wo_xpm",
     parse_player        : q3_parse_player,
     parse_server        : quake_parse_server,
@@ -151,9 +151,9 @@ struct game games[] = {
     default_port        : 27960,
     default_master_port : 27950,
     id                  : "WOETS",
-    qstat_str           : "Q3S",
-    qstat_option        : "-q3s",
-    qstat_master_option : "-q3m",
+    qstat_str           : "WOETS",
+    qstat_option        : "-woets",
+    qstat_master_option : "-woetm",
     icon                : "et_xpm",
     parse_player        : q3_parse_player,
     parse_server        : quake_parse_server,
