@@ -40,3 +40,16 @@ gametype AMS new extend GS2
    game rule = gametype
 end
 
+gametype WOETS new extend Q3S
+    name = Enemy Territory
+    template var = ENEMYTERRITORY
+    game rule = gamename
+end
+gametype WOETM new extend Q3M
+    name = Enemy Territory Master
+    template var = WOETSMASTER
+    master protocol = 83
+    master for gametype = WOETS
+    master query = empty full demo
+end
+
