@@ -1,3 +1,8 @@
+Jun 19, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- use separate types for ET and RTCW so update from master doesn't throw away
+  all servers. Today's qstat cvs version required.
+- add gametypes for World of Padman Q3A mod
+
 Jun 06, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - update Danish translation (Morten Brix Pedersen)
 
